# agentic-contracts

./: Cargo.toml  README.md
src/: context.rs  errors.rs  events.rs  file_format.rs  grounding.rs  hydra.rs  lib.rs  query.rs  receipts.rs  sister.rs  types.rs
tests/: mock_sisters.rs
